medvantx_aks/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medvantx-frontend
  namespace: medvantx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medvantx-frontend
  template:
    metadata:
      labels:
        app: medvantx-frontend
    spec:
      containers:
      - name: medvantx-frontend
        image: mrityunjay0010/frontend:latest
        ports:
        - containerPort: 8080
