medvantx_aks/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medvantx-backend-service
  namespace: medvantx
spec:
  selector:
    app: medvantx-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
  type: ClusterIP
