medvantx_aks/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medvantx-frontend-service
  namespace: medvantx
spec:
  selector:
    app: medvantx-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
