medvantx_aks/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-database-service
  namespace: medvantx
spec:
  selector:
    app: mongo-database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
